--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^11.2.3",
+    "@angular-devkit/schematics": "^11.2.3",
     "@angular/animations": "~10.1.5",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
     "@angular/core": "~10.1.5",
     "@angular/forms": "~10.1.5",
+    "@angular/localize": "~10.1.5",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/store": "^11.0.1",
+    "@ngrx/store-devtools": "^11.0.1",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
